<resources>
    <string name="app_name">Sieve of Applications</string>
    <string name="nav_pkg_list_label">List</string>
    <string name="nav_rater_label">Rate</string>
    <string name="nav_category_list_label">Categories</string>
    <string name="nav_stats_label">Stats</string>
    <string name="nav_exporter_label">Export data</string>
    <string name="item_pkg_string">%d⭐ %s\n%s</string>
    <string name="rate_app_msg">"%.2f/7"</string>
    <string name="pick_btn">Pick one!</string>
    <string name="rate_btn">Rate!</string>
    <string name="drop_apps_btn">Drop database!</string>
    <string name="drop_apps_confirm">Do you really want to delete all apps?</string>
    <string name="drop_categories_confirm">Do you really want to delete all categories?</string>
    <string name="first_choose_category">You need to choose a category first.</string>
    <string name="no_apps">There are no apps…</string>
    <string name="add_category">Add a new category</string>
    <string name="delete_category">Delete a category</string>
    <string name="all_categories"><![CDATA[<all categories>]]></string>
    <string name="new_category">Add new…</string>
    <string name="app_description">%1$s\n%2$s %3$s [%4$d]\n%5$s\ntar %6$s\nmin %7$s\ncom %8$s\n%9$s %10$s %11$s</string>
    <string name="stats">%d (%.1f%%) rated of %d known, %d installed, %d left\n%d entries, %d categories (avg per pkg %.1f, max in cat %d)</string>
    <string name="description">Description</string>
    <string name="nav_bluetooth_connecter_label">Bluetooth</string>
    <string name="bluetooth_device">%s [%s]</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="grant_bluetooth">Grant permission</string>
    <string name="permission_needed">Permission needed</string>
    <string name="connect_device">Connect device</string>
    <string name="drop_app_btn">Delete app</string>
</resources>
