<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_pkg_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_pkg_list_label" />
        <item
            android:id="@id/nav_rater"
            android:icon="@android:drawable/star_on"
            android:title="@string/nav_rater_label" />
        <item
            android:id="@id/nav_category_list"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/nav_category_list_label" />
        <item
            android:id="@id/nav_stats"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_stats_label" />
        <item
            android:id="@id/nav_exporter"
            android:icon="@android:drawable/stat_sys_upload"
            android:title="@string/nav_exporter_label" />
        <item
            android:id="@id/nav_bluetooth_connecter"
            android:icon="@android:drawable/stat_sys_data_bluetooth"
            android:title="@string/nav_bluetooth_connecter_label" />
    </group>
</menu>
